skip get task api test; sync swagger
